JS获取明后天时间

--- a/省市区三级联动(jQuery+Json)/省市区联动.html
+++ b/省市区三级联动(jQuery+Json)/省市区联动.html
@@ -46,3 +46,13 @@ $(function() {
 </select>
 </body>
 </html>
+
+
+            //新增一个索赔结算单
+            //function addCpsJsItem()
+            //{
+                //var shopcode="9004";
+                //var year = "2016";
+                //var month = "10";
+                //window.location.href="{:U('cpsManagerInvoice',array('shopcode'=>"+shopcode+",'year'=>"+year+",'month'=>"+month+"'))}";
+           // }
